update coming soon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Angelina - Responsive Underconstruction Landing Page</title>
+	<title>Coming Soon - Check Back Often</title>
 	<link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,900,600,700' rel='stylesheet' type='text/css'>
 	<link href="css/icons/css/animation.css" rel='stylesheet' type='text/css'>
 	<link href="css/icons/css/fontello.css" rel='stylesheet' type='text/css'>
@@ -23,7 +23,7 @@
 		</header>
 		<!-- Countdown -->
 		<section class="countown_style_1 fadeOutUp" id="countdown_block">
-			<h3 id="site_subheading">welcome to Angelina, a creative and modern<br>coming soon template</h3>
+			<h3 id="site_subheading">welcome to my site, we are currently Underconstruction and wil be <br>coming soon</h3>
 			<h1 id="site_slogan">
 				we are leaders because <br>we
 				<span class="morphtext">love,feel,like</span> what we do
