--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 		<!-- Site Header -->
 		<header id="header">
 			<div id="site_logo">
-				<h1><a href="#"><img src="images/logo.png" title='Angelina - Responsive Underconstruction Landing Page' alt=""></a></h1>
+				<h1><a href="#"><img src="images/logo1.png" title='Under Construction - Check back soon' alt=""></a></h1>
 			</div>
 		</header>
 		<!-- Countdown -->
 		<section class="countown_style_1 fadeOutUp" id="countdown_block">
-			<h3 id="site_subheading">welcome to my site, we are currently Underconstruction and wil be <br>coming soon</h3>
+			<h3 id="site_subheading">welcome to my site, we are currently Under construction and we'll be <br>coming back soon</h3>
 			<h1 id="site_slogan">
 				we are leaders because <br>we
 				<span class="morphtext">love,feel,like</span> what we do
 			</h1>
-			<h4 id="countdown_label">We will be back in</h4>
+			<h4 id="countdown_label">We will be back in a few days, check back soon!</h4>
 		</section>
 		<section id="site_content">
 			<!-- Section About -->
@@ -131,7 +131,7 @@
 				</div>
 			</div>
 		</section>
-		<footer id="site_footer">
+	<!--	<footer id="site_footer">
 			<ul class="social_links"><!-- 
 			 --><li><a href="#"><i class="icon-social_twitter_square"></i></a></li><!-- 
 			 --><li><a href="#"><i class="icon-social_facebook_square"></i></a></li><!-- 
@@ -139,9 +139,9 @@
 			 --><li><a href="#"><i class="icon-social_instagram_square"></i></a></li><!-- 
 			 --><li><a href="#"><i class="icon-social_pinterest_square"></i></a></li>
 			</ul>
-		</footer>
+		</footer> 
 	</div>
-	<section id="nav_wrap">
+	 <section id="nav_wrap">
 		<div id="nav_wrap_inside">
 			<nav id="site_nav">
 				<ul id="main_menu">
@@ -164,7 +164,7 @@
 				</div>
 			</form>
 		</div>
-	</section>
+	</section> -->
 	<div id="single_img_bg" class="pattern_overlay"></div>
 	<!-- /Site Header -->
 	<script src="js/jquery-1.11.2.min.js"></script>
