--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Site Header -->
 		<header id="header">
 			<div id="site_logo">
-				<h1><a href="#"><img src="images/logo1.png" title='Under Construction - Check back soon' alt=""></a></h1>
+				<h1><a href="#"><img src="images/logo1.png" title='Under Construction - Check back soon' alt="logo"></a></h1>
 			</div>
 		</header>
 		<!-- Countdown -->
